Table Musteri {
  MusteriID int [pk, increment]
  Ad nvarchar(50) [not null]
  Soyad nvarchar(50) [not null]
  TCKN char(11) [unique, not null]
  DogumTarihi date
  Email nvarchar(100) [unique]
  Telefon nvarchar(15)
  KayitTarihi datetime [not null, default: `GETDATE()`]
}

Table Hesap {
  HesapID int [pk, increment]
  MusteriID int [ref: > Musteri.MusteriID, not null]
  HesapNo varchar(20) [unique, not null]
  Bakiye decimal(18,2) [not null, default: 0]
  ParaBirimi char(3) [not null, default: 'TRY']
  HesapTipi nvarchar(20) [not null]
  AcilisTarihi datetime [not null, default: `GETDATE()`]
  Durum nvarchar(20) [not null, default: 'AKTIF']
}

Table Islem {
  IslemID int [pk, increment]
  HesapID int [ref: > Hesap.HesapID, not null]
  Tutar decimal(18,2) [not null]
  IslemTipi nvarchar(20) [not null]
  IslemTarihi datetime [not null, default: `GETDATE()`]
  Aciklama nvarchar(200)
  FraudFlag bit [not null, default: 0]
}

Table Kredi_Basvuru {
  BasvuruID int [pk, increment]
  MusteriID int [ref: > Musteri.MusteriID, not null]
  BasvuruTarihi datetime [not null, default: `GETDATE()`]
  TalepEdilenTutar decimal(18,2) [not null]
  Vade int [not null]
  AylikGelir decimal(18,2) [not null]
  Durum nvarchar(20) [not null, default: 'BEKLEMEDE']
  DegerlendirmeTarihi datetime
}

Table Kredi_Skoru {
  SkorID int [pk, increment]
  MusteriID int [ref: > Musteri.MusteriID, not null]
  Skor decimal(5,4) [not null]
  HesaplamaTarihi datetime [not null, default: `GETDATE()`]
  HesaplamaYontemi nvarchar(50) [not null]
}

Table Fraud_Log {
  LogID int [pk, increment]
  IslemID int [ref: > Islem.IslemID, not null]
  RiskSkoru decimal(5,4) [not null]
  Aciklama nvarchar(500)
  LogTarihi datetime [not null, default: `GETDATE()`]
}

Table ML_Model_Sonuc {
  SonucID int [pk, increment]
  MusteriID int [ref: > Musteri.MusteriID, not null]
  BasvuruID int [ref: > Kredi_Basvuru.BasvuruID, not null]
  ModelAdi nvarchar(50) [not null]
  Cikti decimal(5,4) [not null]
  TahminEtiketi nvarchar(20) [not null]
  Tarih datetime [not null, default: `GETDATE()`]
}